--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -63,8 +63,9 @@
         <li><a href="{{ author.researchgate }}"><i class="fab fa-fw fa-researchgate icon-pad-right" aria-hidden="true"></i>ResearchGate</a></li>
       {% endif %}
       {% if author.dblp %}
-        <li><a href="{{ author.dblp }}"><i class="im icon-dblp"></i>DBLP</a></li>
-      {% endif %}
+        <li><a href="{{ author.dblp }}"> <img src="/images/dblp.svg" alt="DBLP">
+      DBLP
+    </a>
       {% if author.scopus %}
         <li><a href="{{ author.scopus }}"><i class="ai ai-scopus icon-pad-right"></i>Scopus</a></li>
       {% endif %}
