--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -63,7 +63,7 @@
         <li><a href="{{ author.researchgate }}"><i class="fab fa-fw fa-researchgate icon-pad-right" aria-hidden="true"></i>ResearchGate</a></li>
       {% endif %}
       {% if author.dblp %}
-        <li><a href="{{ author.dblp }}"> <img src="/images/dblp.svg" alt="DBLP" style="height: 1em; margin-right: 0.3em; vertical-align: middle;">
+        <li><a href="{{ author.dblp }}"> <i src="/images/dblp.svg" style="height: 1em; margin-right: 0.3em; vertical-align: middle;">
       DBLP
     </a>
       {% if author.scopus %}
