--- a/assets/css/academicons.css
+++ b/assets/css/academicons.css
@@ -15,6 +15,27 @@
         url('../fonts/academicons.woff') format('woff'),
         url('../fonts/academicons.svg') format('svg');
 }
+
+.im {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  speak: never;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-dblp:before {
+  content: "\e900";
+}
+
+
 .ai {
   font-family: 'Academicons';
   font-weight: 400;
