--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -62,10 +62,9 @@
       {% if author.researchgate %}
         <li><a href="{{ author.researchgate }}"><i class="fab fa-fw fa-researchgate icon-pad-right" aria-hidden="true"></i>ResearchGate</a></li>
       {% endif %}
-      <!-- {% if author.dblp %}
-        <li><a href="{{ author.dblp }}"> <img src="{{"/images/dblp.svg" | prepend: bash_path}}" style="height: 100em; margin-right: 100em; vertical-align: middle;" alt="">
-        DBLP
-      </a> -->
+      {% if author.dblp %}
+        <li><a href="{{ author.dblp }}"> <img src="{{"/images/dblp.svg" | prepend: bash_path}}" style="height: 100em; margin-right: 100em; vertical-align: middle;" alt="">DBLP</a></li>
+      {% endif %}
       {% if author.scopus %}
         <li><a href="{{ author.scopus }}"><i class="ai ai-scopus icon-pad-right"></i>Scopus</a></li>
       {% endif %}
